--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -35,7 +35,7 @@
 
       <input type="hidden" name="_csrf" value="{{csrf}}">
 
-      <button type="submit" class="btn">Download</button>
+      <button type="submit" class="btn">Upload</button>
     </form>
   </div>
 </div>
