--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,4 @@
-<h1>Profile</h1>
+<h1 style="font-size: 40px;">Profile</h1>
 
 <div class="row">
   <div class="col s6">
@@ -9,7 +9,7 @@
         alt="avatar-{{user.name}}"
       >
     {{else}}
-      <p>There is no profile photo here</p>
+      <p>There is no profile photo here yet</p>
     {{/if}}
   </div>
 
