--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,52 +1,92 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo">UDEMY 2.0</a>
+    {{#if isAuth}}
+    <a href="/laptops" class="brand-logo">Walmart</a>
+    {{else}}
+    <a href="/auth/login#login" class="brand-logo">UDEMY 2.0</a>
+    {{/if}}
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+        {{#if isAuth}}
+          {{#if role}}
+            {{#if isCourses}}
+              <li class="active"><a href="/laptops">Laptops</a></li>
+            {{else}}
+              <li><a href="/laptops">Laptops</a></li>
+            {{/if}}
 
-      {{#if isHome}}
-        <li class="active"><a href="/">Home</a></li>
-      {{else}}
-        <li><a href="/">Home</a></li>
-      {{/if}}
+            {{#if isAdd}}
+              <li class="active"><a href="/add">Add laptop</a></li>
+            {{else}}
+              <li><a href="/add">Add laptop</a></li>
+            {{/if}} 
 
-      {{#if isCourses}}
-        <li class="active"><a href="/courses">Courses</a></li>
-      {{else}}
-        <li><a href="/courses">Courses</a></li>
-      {{/if}}
+            {{#if isProfile}}
+              <li class="active"><a href="/profile">Profile</a></li>
+            {{else}}
+              <li><a href="/profile">Profile</a></li>
+            {{/if}} 
 
-      {{#if isAuth}}
-        {{#if isAdd}}
-          <li class="active"><a href="/add">Add course</a></li>
-        {{else}}
-          <li><a href="/add">Add course</a></li>
-        {{/if}} 
+            {{#if isCard}}
+              <li class="active"><a href="/card">Cart</a></li>
+            {{else}}
+              <li><a href="/card">Cart</a></li>
+            {{/if}} 
 
-        {{#if isProfile}}
-          <li class="active"><a href="/profile">Profile</a></li>
-        {{else}}
-          <li><a href="/profile">Profile</a></li>
-        {{/if}} 
+            {{#if isOrder}}
+              <li class="active"><a href="/orders">Orders</a></li>
+            {{else}}
+              <li><a href="/orders">Orders</a></li>
+            {{/if}} 
 
-        {{#if isCard}}
-          <li class="active"><a href="/card">Cart</a></li>
-        {{else}}
-          <li><a href="/card">Cart</a></li>
-        {{/if}} 
+            {{#if isUsers}}
+              <li class="active"><a href="/users">Users</a></li>
+            {{else}}
+              <li><a href="/users">Users</a></li>
+            {{/if}} 
+            {{#if isOrdersUsers}}
+              <li class="active"><a href="/order-users">Orders of users</a></li>
+            {{else}}
+              <li><a href="/order-users">Orders of users</a></li>
+            {{/if}}
+              <li><a href="/auth/logout">Log out</a></li>
+          {{else}}
+            {{#if isCourses}}
+              <li class="active"><a href="/laptops">Laptops</a></li>
+            {{else}}
+              <li><a href="/laptops">Laptops</a></li>
+            {{/if}}
 
-        {{#if isOrder}}
-          <li class="active"><a href="/orders">Orders</a></li>
-        {{else}}
-          <li><a href="/orders">Orders</a></li>
-        {{/if}} 
+            {{#if isProfile}}
+              <li class="active"><a href="/profile">Profile</a></li>
+            {{else}}
+              <li><a href="/profile">Profile</a></li>
+            {{/if}} 
 
-        <li><a href="/auth/logout">Log out</a></li>
-      {{else}}
-        {{#if isLogin}}
-          <li class="active"><a href="/auth/login#login">Sign in</a></li>
-        {{else}}
-          <li><a href="/auth/login#login">Sign in</a></li>
-        {{/if}} 
+            {{#if isCard}}
+              <li class="active"><a href="/card">Cart</a></li>
+            {{else}}
+              <li><a href="/card">Cart</a></li>
+            {{/if}} 
+
+            {{#if isOrder}}
+              <li class="active"><a href="/orders">Orders</a></li>
+            {{else}}
+              <li><a href="/orders">Orders</a></li>
+            {{/if}} 
+              <li><a href="/auth/logout">Log out</a></li>
+           
+            {{/if}} 
+        {{else}}  
+            
+
+            {{#if isLogin}}
+              <li class="active"><a href="/auth/login#login">Sign in</a></li>
+            {{else}}
+              <li><a href="/auth/login#login">Sign in</a></li>
+            {{/if}} 
+             
+
+      
       {{/if}}
     </ul>
   </div>
