--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,7 +3,7 @@
     {{#if isAuth}}
     <a href="/laptops" class="brand-logo">Walmart</a>
     {{else}}
-    <a href="/auth/login#login" class="brand-logo">UDEMY 2.0</a>
+    <a href="/auth/login#login" class="brand-logo">Walmart</a>
     {{/if}}
     <ul id="nav-mobile" class="right hide-on-med-and-down">
         {{#if isAuth}}
