--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+.nav-wrapper{
+  background-color: #42a89e;
+}
+
 .nav-wrapper {
   padding: 0 2rem;
 }
@@ -33,13 +37,18 @@
   height: auto;
 }
  */
+
 .card-image {
-  height: 300px;
+  
+  height: 320px;
+  width: 320px;
   display: flex;
   align-items: center;
 }
 
+
 .card-image img{
+  padding: 20px;
   width:  100%;
 }
 
@@ -98,6 +107,7 @@
 
 .users-table{
   margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .orders{
@@ -108,7 +118,22 @@
   font-weight: bold;
   padding: 35px;
 }
-
 .carousel{
-  
+  height: 570px;
+}
+
+.carousel .carousel-item{
+  margin-top: 5%;
+ width: 500px;
+ height: 500px;
+}
+
+.pagination{
+  margin-left: 40%;
+  margin-bottom: 5%;
+  margin-top: 1%;
+}
+
+.row .col{
+  padding: 0 .30rem !important
 }
