--- a/views/order-users.hbs
+++ b/views/order-users.hbs
@@ -1,4 +1,5 @@
 <h1 style="font-size: 40px;">Orders of users</h1>
+{{#if orders}}
 <table style="margin-bottom: 20px;" class="orders centered striped">
         <thead>
           <tr>
@@ -23,3 +24,6 @@
             {{/each}}
         </tbody>
       </table>
+      {{else}}
+      <p>No orders of users yet</p>
+      {{/if}}
