--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -9,7 +9,7 @@
       <div class="card-image">
         <img src="{{img}}" alt="{{title}}">
       </div>
-      <div class="card-content">
+      <div class="card-content2">
         <span class="card-title">{{title}}</span>
         <p class="price">{{price}}</p>
       </div>
